# ai-agent-cli

./: .gitignore  README.md  WARP.md  pyproject.toml
.ai-agent/: config.yaml
docs/: Design.md  Implementation-Plan.md  Runbook-Generate-Docs-Design.md  Runbook-Generate-Tests.md  TODO.md  USAGE.md
prompts/: prompt-design-2.txt  prompt-design-llm.txt  prompt-design-truncated.txt  prompt-design.txt  prompt-docs-llm.txt  prompt-docs-truncated.txt  prompt-tests.txt
src/ai_agent/: __init__.py  __main__.py  cli.py  config.py  extractor.py  limits.py  llm.py  output.py  parser.py  scanner.py  template_engine.py
templates/base/: base_en.j2
templates/design/: design_en.j2
templates/docs/: docs_en.j2
templates/tests/: pytest_en.j2
